argocd/apps/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: immich-server
  name: immich-server
spec:
  ports:
    - name: http
      port: 2283
      targetPort: 2283
  selector:
    app: immich-server
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: immich-ml
  name: immich-ml
spec:
  ports:
    - name: ml
      port: 3000
      targetPort: 3000
  selector:
    app: immich-server
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app: redis
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
