argocd/apps/immich/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: ihatemoney-app
  name: ihm-httproute
  namespace: ihatemoney
spec:
  hostnames:
  - ihm.yanello.net
  rules:
  - backendRefs:
    - name: ihatemoney
      namespace: ihatemoney
      port: 8000
      weight: 0
