argocd/apps/immich/ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: immich-vs
spec:
  hosts:
  - immich.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: immich-server
        port:
          number: 2283
